--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,14 +8,16 @@ pipeline{
     }
     stages{
         stage("Build the docker image for PHP and push to prviate registry"){
+            stepsp{
             script{
-                sshagent(['BUILD_SERVER']){
+                sshagent(['build-server']){
                 withCredentials([usernamePassword(credentialsId: 'docker-hub', passwordVariable: 'PASSWORD', usernameVariable: 'USERNAME')]){
                 sh "ssh -o strictHostKeyChecking=no -r devserverconfig  ${DEV_SERVER_IP}:/home/ec2-user"
                 sh "ssh -o strictHostKeyChecking=no ${DEV_SERVER_IP} 'bash ~/devserverconfig/docker-script.sh"
                 sh "ssh  ${DEV_SERVER_IP} sudo docker build -t ${IMAGE_NAME} ~/devserverconfig"
                 sh "ssh  ${DEV_SERVER_IP} sudo docker login -u  ${USERNAME} -p ${PASSWORD}"
                 sh "ssh  ${DEV_SERVER_IP} sudo docker push ${IMAGE_NAME}"
+                }
             }
             }
 
